# bazel-monorepo

./: .bazelignore  .bazelrc  .bazelrc.ci  .eslintrc.cjs  .eslintrc.js  .flake8  .gitignore  BUILD.bazel  MODULE.bazel  README.MD  README_MONOREPO_CREATE.MD  WORKSPACE  eslint.config.mjs  lalala-eslintrc.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  renovate.json  requirements.in  requirements.txt  stylelint.config.mjs  test_file.test.mjs  yamlfmt.yml
.aspect/: config.axl
.aspect/cli/: config.yaml
.github/workflows/: bazel-ci.yml  dependency-review.yml
docs/: ADD_NPM_AS_BAZEL_TOOL.MD  BAZEL_TRAINING.MD  CREATE_MONOREPO.MD  INTRO.MD  TROUBLESHOOTING.MD
experimental/random/: .gitignore  BUILD.bazel
experimental/service_test_go/: BUILD.bazel  README.MD  go.mod
experimental/service_test_go/mypkg/: BUILD.bazel
experimental/service_test_go/src/: greet.go  main.go
experimental/service_test_go_tests/: BUILD.bazel  README.MD  go.mod
experimental/service_test_go_tests/handlerpkg/: BUILD.bazel  handlerpkg.go
experimental/service_test_go_tests/mypkg/: BUILD.bazel  mypkg.go  mypkg_test.go
experimental/service_test_go_tests/src/: main.go  main_test.go
experimental/service_test_py/: BUILD.bazel  README.MD
experimental/service_test_py/src/: app.py  test_app.py  test_app_with_deps.py  test_app_with_deps_server.py
experimental/service_test_py_tests/: BUILD.bazel  README.MD
experimental/service_test_py_tests/src/: foo.py  foo_test.py
experimental/service_test_py_tests/tests/: foo_test.py  test_foo.py
experimental/service_test_ts/: BUILD.bazel  README.MD  package.json  tsconfig.json
experimental/service_test_ts/src/: index.ts  index2.ts
experimental/service_test_ts_esbuild/: BUILD.bazel  README.MD  tsconfig.json
experimental/service_test_ts_esbuild/src/: index.ts  utils.ts
experimental/service_test_ts_infra/: BUILD.bazel  Dockerfile  README.MD  package.json  tsconfig.json
experimental/service_test_ts_infra/infra/: BUILD.bazel  README.MD  deployment.yaml
experimental/service_test_ts_infra/infra/helm_chart/: Chart.yaml  README.MD  values.yaml
experimental/service_test_ts_infra/infra/helm_chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
experimental/service_test_ts_infra/infra/k8s_manifests/: deployment.yaml
experimental/service_test_ts_infra/src/: index.ts  utils.ts
experimental/service_test_ts_rspack_react_tests_assets_swc/: .mocharc.json  BUILD.bazel  README.MD  eslint.config.mjs  package.json  rspack.dev.config.cjs  tsconfig.json
experimental/service_test_ts_rspack_react_tests_assets_swc/src/: App.tsx  index.html  util2.spec.ts
experimental/service_test_ts_rspack_react_tests_assets_swc/src/styles/: _reset.scss  _variables.scss
experimental/service_test_ts_vite_vitest_tests/: BUILD.bazel  README.MD  package.json  tsconfig.json  vite.config.ts
experimental/service_test_ts_vite_vitest_tests/src/: basic.spec.tsx  vitest-setup.ts
experimental/service_test_ts_vite_vitest_tests/src/utils/: test-utils.tsx
experimental/service_test_ts_webpack/: BUILD.bazel  README.MD  package.json  webpack.config.cjs
experimental/service_test_ts_webpack/src/: index.ts  index2.ts
experimental/service_test_ts_webpack_react/: BUILD.bazel  README.MD  package.json  tsconfig.json  webpack.config.cjs
experimental/service_test_ts_webpack_react/src/: App.tsx  index.html  index.ts  index.tsx  util1.ts  util2.ts
experimental/service_test_ts_webpack_react_filegroup_test/service_consumer/: BUILD.bazel  package.json  webpack.config.cjs
experimental/service_test_ts_webpack_react_filegroup_test/service_producer/: BUILD.bazel  package.json  webpack.config.cjs
experimental/service_test_ts_webpack_react_filegroup_test/service_producer/src/: index.html  index.tsx
experimental/service_test_ts_webpack_react_tests/: .eslintrc.cjs  .eslintrc.js  BUILD.bazel  README.MD  eslint.config.js  eslint.config.mjs  package.json  tsconfig.json
experimental/service_test_ts_webpack_react_tests/src/: App.tsx  index.html  index.tsx  util1.spec.ts  util2.ts
experimental/service_test_ts_webpack_react_tests_assets/: BUILD.bazel  README.MD  eslint.config.mjs  package.json  tsconfig.json
experimental/service_test_ts_webpack_react_tests_assets/src/: App.tsx  index.html  styles.scss  util1.ts  util2.ts
experimental/service_test_ts_webpack_react_tests_assets_swc/: BUILD.bazel  README.MD  eslint.config.mjs  package.json  tsconfig.json  webpack.config.cjs
experimental/service_test_ts_webpack_react_tests_assets_swc/src/: index.html  index.tsx  styles.scss  util1.ts
experimental/service_test_ts_webpack_react_tests_assets_swc/src/styles/: _reset.scss  _variables.scss
experimental/simple_go_bin/: BUILD.bazel  README.MD  go.mod  main.go
experimental/simple_js_binary_test/: BUILD.bazel  README.MD  package.json
experimental/simple_js_binary_test/src/: file1.json  file22.json  index.js
experimental/simple_js_library_test/: BUILD.bazel  README.MD  index.js  package.json
experimental/simple_rust_binary_test/: BUILD.bazel  README.MD  main.rs
tools/format/: BUILD.bazel
tools/format/examples/: css_test.css  go_test.go  html_test.html  js_test.js  md_test.md  py_test.py  scss_test.scss  shell_test.sh  sql_test.sql  star_test.star  tf_test.tf  ts_test.ts  yaml_test.yaml
tools/lint/: BUILD.bazel  linters.bzl
tools/rspack/: BUILD.bazel  package.json  rspack.bzl
tools/sass/: BUILD.bazel  package.json  sass.bzl
tools/skylib/: foo.bzl  test_repo_rules.bzl  test_rules.bzl  ts.bzl  tsconfig_to_swcrc.bzl  webpack.bzl
tools/swc/: BUILD.bazel  package.json  tsconfig.json
tools/test-mocha/: .eslintrc.cjs  BUILD.bazel  package.json
tools/test-mocha/scripts/: mocha-test.mjs
tools/vite/: package.json  vite.bzl
tools/webpack/: BUILD.bazel  package.json  webpack.bzl
