load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_uv//uv:pip.bzl", "pip_compile")

npm_link_all_packages(name = "node_modules")

package(default_visibility = ["//visibility:public"])

pip_compile(name = "generate_requirements_txt")

js_library(
    name = "prettierrc",
    srcs = ["prettier.config.cjs"],
    deps = [":node_modules/prettier-plugin-sql"],
)

# $ bazel run //:format
alias(
    name = "format",
    actual = "//tools/format",
)

# $ bazel run //:format.check
alias(
    name = "format.check",
    actual = "//tools/format:format.check",
)
