load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_uv//uv:pip.bzl", "pip_compile")

npm_link_all_packages(name = "node_modules")

package(default_visibility = ["//visibility:public"])

pip_compile(name = "generate_requirements_txt")

js_library(
    name = "prettierrc",
    srcs = ["prettier.config.cjs"],
    deps = [":node_modules/prettier-plugin-sql"],
)

# $ bazel run //:format
alias(
    name = "format",
    actual = "//tools/format",
)

# $ bazel run //:format.check
alias(
    name = "format.check",
    actual = "//tools/format:format.check",
)

js_library(
    name = "eslintrc",
    srcs = [
        "eslint.config.mjs",
        # ".eslintignore",
        # "//experimental/service_test_ts_webpack_react_tests:eslintrc",
    ],
    deps = [
        ":node_modules/@eslint/js",
        ":node_modules/typescript-eslint",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)
