module(
    name = "tomsoir_monorepo",
    version = "0.1",
)

# ---

bazel_dep(name = "aspect_rules_ts", version = "3.8.3")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

# ---

bazel_dep(name = "aspect_rules_js", version = "2.8.3")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
use_repo(pnpm, "pnpm")

# ---

bazel_dep(name = "aspect_rules_webpack", version = "0.17.1")

# ---

# https://github.com/bazelbuild/rules_sass
# https://github.com/GZGavinZhao/gzgz_rules_sass
bazel_dep(name = "gzgz_rules_sass", version = "1.0.4")

sass = use_extension("@gzgz_rules_sass//sass:extensions.bzl", "sass")
use_repo(sass, "sass_toolchains")

sass.toolchain(sass_version = "1.63.6")

register_toolchains("@sass_toolchains//:all")

# ---

# copy_to_bin, etc...
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

# ---

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1")

# ---

# # rules_python
# # https://github.com/aspect-build/rules_py/releases/tag/v1.1.0
# # Example how to setup Python projects in monorepo
# # https://github.com/aspect-build/rules_py/blob/23f0f019df7921927b2677a1d40b40af27e09458/examples/uv_pip_compile/MODULE.bazel

bazel_dep(name = "rules_uv", version = "0.89.2", dev_dependency = True)

bazel_dep(name = "rules_python", version = "1.7.0")

bazel_dep(name = "aspect_rules_py", version = "1.6.6", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")

# ---

bazel_dep(name = "rules_go", version = "0.59.0")

# ---

bazel_dep(name = "aspect_rules_swc", version = "2.6.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# ---

bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)

bazel_dep(name = "rules_oci", version = "2.2.7")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.toolchains(name = "oci_toolchains")
use_repo(oci, "oci_toolchains_crane_toolchains", "oci_toolchains_regctl_toolchains")

oci.pull(
    name = "node_20_slim",
    image = "docker.io/library/node:20-slim",
    platforms = ["linux/amd64"],
)
use_repo(oci, "node_20_slim", "node_20_slim_linux_amd64")

# ---

bazel_dep(name = "aspect_rules_esbuild", version = "0.25.0")

# ---

bazel_dep(name = "aspect_rules_lint", version = "1.13.0")

# ---

bazel_dep(name = "rules_helm", version = "0.20.1")
