load("//:tools/skylib/test_rules.bzl", "bar_binary", "baz_binary", "foo_binary", "qux_binary")

# Rule that creates text file with HELLO WORLD text and using BASH command
genrule(
    name = "test_file",
    srcs = [],
    outs = ["output.txt"],
    cmd = "echo 'HELLO WORLD1' > $@",
)

genrule(
    name = "test_file2",
    srcs = [],
    outs = ["output2.txt"],
    cmd = "echo 'HELLO WORLD2' > $@",
)

print(">>> (2.2) BUILD file is evaluated")

foo_binary(
    name = "hello_bin1",
    username = "Artem",
)

foo_binary(
    name = "hello_bin2",
    username = "Tkachenko",
)

bar_binary(
    name = "hello_bar_bin1",
    src = [":hello_bin2"],
    username = "Artem",
)

baz_binary(
    name = "hello_baz_bin1",
    src = [":hello_bar_bin1"],
)

qux_binary(
    name = "hello_qux_bin1",
    src = [":hello_baz_bin1"],
    write_to_source_path = "experimental/random/",
)

genrule(
    name = "print_hello_by_repo_rule",
    srcs = ["@my_external_repo//:hello"],
    outs = ["print_hello_by_repo_rule_out.txt"],
    cmd = "cat $(location @my_external_repo//:hello) > $@",
)
