load("@aspect_rules_py//py:defs.bzl", "py_library", "py_pytest_main", "py_test")

py_library(
    name = "lib",
    srcs = ["src/foo.py"],
    imports = ["../.."],
)

py_pytest_main(
    name = "__test__",
    chdir = package_name(),  # So that test fixtures are available at the correct path
    deps = [
        "@pypi//coverage",
        "@pypi//pytest",
    ],
)

py_test(
    name = "pytest_test",
    srcs = [
        "src/foo_test.py",
        ":__test__",
    ],
    data = glob([
        "src/fixtures/*.json",
    ]),
    imports = ["../.."],
    main = ":__test__.py",
    package_collisions = "warning",
    deps = [
        ":__test__",
        ":lib",
        "@pypi//pytest",
    ],
)
