load("@aspect_rules_py//py:defs.bzl", "py_library", "py_pytest_main", "py_test")

py_library(
    name = "foo_lib",
    srcs = ["src/foo.py"],
    imports = ["src"],  # Ensure Bazel knows where to find src as a module
    deps = [],
    visibility = ["//visibility:public"],
)

py_pytest_main(
    name = "__test__",
    chdir = package_name(),  # So that test fixtures are available at the correct path
    deps = [
        "@pypi//coverage",
        "@pypi//pytest",
    ],
)

py_test(
    name = "pytest_test",
    srcs = [
        "tests/foo_test.py",
        ":__test__",
    ],
    data = glob([
        "tests/fixtures/*.json",
    ]),
    imports = ["src"],
    main = ":__test__.py",
    package_collisions = "warning",
    deps = [
        ":__test__",
        ":foo_lib",
        "@pypi//pytest",
    ],
)

load("@aspect_rules_py//py:defs.bzl", "py_binary")

# $ bazel run test_app
py_binary(
    name = "test_app",
    srcs = [":foo_lib"],
)
