load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name="tsc",
    srcs = ["src/index.ts"],
    tsconfig= "//experimental/service_test_ts:tsconfig.json",
    allow_js=True,
    resolve_json_module=True,
    declaration_map=True,
    source_map=True,
    declaration=True,
    incremental=True,
)

# load("@aspect_rules_js//ts:defs.bzl", "ts_config")

# ts_config(name="tscc", deps=[], src="//:tsconfig.json")