load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

ts_project(
    name="tsc",
    # srcs = [
    #     "src/index.ts",
    #     "src/index2.ts",
    # ],
    srcs = glob([
        "src/**/*.ts",
    ]),
    tsconfig= "tsconfig.json",
    allow_js=True,
    resolve_json_module=True,
    declaration_map=True,
    source_map=True,
    declaration=True,
    incremental=True,
    out_dir = "dist",
    root_dir = "src",
)

js_binary(
    name="svc",
    data=[":tsc", "package.json"],
    chdir= package_name(),
    entry_point = "dist/index.js",
)
