load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "tsc",
    # srcs = [
    #     "src/index.ts",
    #     "src/index2.ts",
    # ],
    srcs = glob([
        "src/**/*.ts",
    ]),
    allow_js = False,
    declaration = True,
    declaration_map = True,
    incremental = True,
    out_dir = "dist",
    resolve_json_module = True,
    root_dir = "src",
    source_map = True,
    transpiler = "tsc",
    tsconfig = "tsconfig.json",
    deps = [
        # There is no point to use
        # ":node_modules/@types/express",
        # ":node_modules/express",

        # Example how to use monorepo root NPM packages instead of
        # repeating the same declaration from project's package.json
        # to project's package.json
        "//:node_modules/@types/express",
        "//:node_modules/express",
    ],
)

js_binary(
    name = "tsc_app",
    chdir = package_name(),
    data = [
        "package.json",
        ":tsc",
    ],
    entry_point = "dist/index.js",
)
