load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "tsc",
    srcs = glob([
        "src/**/*.ts",
    ]),
    allow_js = True,
    declaration = True,
    declaration_map = True,
    incremental = True,
    out_dir = "dist",
    resolve_json_module = True,
    root_dir = "src",
    source_map = True,
    tsconfig = "tsconfig.json",
    deps = [
        ":node_modules/@types/express",
        ":node_modules/express",
    ],
)

esbuild(
    name = "bundle",
    entry_point = "dist/index.js",
    format = "cjs",
    output = "bundle.cjs",
    output_dir = False,
    platform = "node",
    splitting = False,
    target = "es2020",
    deps = [
        ":tsc",
    ],
)

js_binary(
    name = "esbuild_binary_app_bin",
    data = [":bundle"],
    entry_point = "bundle.cjs",
)
