load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

package(default_visibility = ["//:__subpackages__"])

ts_project(
    name = "tsc",
    srcs = glob([
        "src/**/*.ts",
    ]),
    allow_js = False,
    declaration = True,
    declaration_map = True,
    incremental = True,
    out_dir = "dist",
    resolve_json_module = True,
    root_dir = "src",
    source_map = True,
    tsconfig = "tsconfig.json",
    deps = [
        ":node_modules/@types/express",
        ":node_modules/express",
    ],
)

js_binary(
    name = "tsc_binary_app_bin",
    chdir = package_name(),
    data = [
        "package.json",
        ":tsc",
    ],
    entry_point = "dist/index.js",
    visibility = ["//visibility:public"],
)
