load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//tools/vite:vite.bzl", "vite")

npm_link_all_packages(name = "node_modules")

copy_to_bin(
    name = "vite_srcs_export",
    srcs = glob([
        "src/**/*.css",
        "src/**/*.svg",
        "src/**/*.ts",
        "src/**/*.tsx",
        "src/*.tsx",
        "src/**/*.html",
        "src/utils/**/*.tsx",
        "public/**/*.svg",
    ] + ["vite.config.ts"]),
)

vite(
    assets = [":vite_srcs_export"],
    tests = glob([
        "src/**/*.test.tsx",
    ]),
    deps = [
        "package.json",
        "tsconfig.json",
        # ":tsc",
    ],
)

# ----------
# NOT IN USE
# ----------
# load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

# ts_project(
#     name = "tsc",
#     srcs = glob([
#         "src/**/*.ts",
#         "src/**/*.tsx",
#         "src/**/*.css",
#         "src/**/*.svg",
#         "src/**/*.ts",
#         "src/**/*.tsx",
#         "src/**/*.html",
#         "src/utils/**/*.tsx",
#         "public/**/*.svg",
#     ]),
#     allow_js = False,
#     declaration = True,
#     declaration_map = True,
#     incremental = True,
#     out_dir = "dist",
#     resolve_json_module = True,
#     root_dir = "src",
#     source_map = False,
#     tsconfig = "tsconfig.json",
#     deps = [
#         ":node_modules",
#     ],
# )
