load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//tools/vite:vite.bzl", "vite")

npm_link_all_packages(name = "node_modules")

copy_to_bin(
    name = "vite_srcs_export",
    srcs = glob([
        "src/**/*.css",
        "src/**/*.svg",
        "src/**/*.ts",
        "src/**/*.tsx",
        "src/*.tsx",
        "src/**/*.html",
        "src/utils/**/*.tsx",
        "public/**/*.svg",
    ] + ["vite.config.ts"]),
)

vite(
    assets = [":vite_srcs_export"],
    # tests = glob([
    #     "src/**/*.test.tsx",
    # ]),
    tests = [
        "src/basic.spec.tsx",
    ],
    deps = [
        "package.json",
        "tsconfig.json",
    ],
)

filegroup(
    name = "css",
    srcs = glob(
        [
            "src/**/*.css",
        ],
    ),
    tags = ["lint-with-stylelint"],
)
