load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_webpack//webpack:defs.bzl", "webpack_bundle")
load("@gzgz_rules_sass//sass:defs.bzl", "sass_binary")
load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("@aspect_rules_webpack//webpack:defs.bzl", "webpack_devserver")

npm_link_all_packages(name="node_modules")

ts_project(
    name="tsc",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]),
    tsconfig= "tsconfig.json",
    allow_js=True,
    resolve_json_module=True,
    declaration_map=True,
    source_map=True,
    declaration=True,
    incremental=True,
    out_dir = "dist",
    root_dir = "src",
    deps = [
        ":node_modules/react",
        ":node_modules/@types/react",
        ":node_modules/react-dom",
        ":node_modules/@types/react-dom",
    ]
)

# # React-js need document DOM API context to be executing which is available
# # when running the js app in a browser, so js_binary can NOT be used now since
# # it executes js app in NodeJS that doesn't have it.
# js_binary(
#     name="tsc_app",
#     data=[
#         ":tsc",
#         "package.json",
#     ],
#     chdir= package_name(),
#     entry_point = "dist/index.js",
# )

webpack_bundle(
    name="webpack_build",
    srcs=[":tsc"],
    node_modules=":node_modules",
    entry_point="dist/index.js",
    output_dir=False,
    chdir= package_name(),
    tags=["webpack"],
    webpack_config="webpack.config.cjs",
    deps=[
        ":node_modules/webpack",
    ]
)

# # React-js need document DOM API context to be executing which is available
# # when running the js app in a browser, so js_binary can NOT be used now since
# # it executes js app in NodeJS that doesn't have it.
# js_binary(
#     name="webpack_app",
#     data=[
#         ":webpack_build",
#     ],
#     chdir= package_name(),
#     entry_point = "webpack_build.js",
# )

# Rule works!
# @TODO: find a better way!
# Note: We need to figure out first how to inject css into React app:
# Dynamically (inject during bundling) or statically (by linking statically generated file)
sass_binary(
    name = "styles",
    output_dir = "dist",
    output_name = "styles.css",
    src = "src/styles.scss",
)

# Rule works!
# @TODO: find a better way!
copy_file(
    name = "index_html",
    src = "src/index.html",
    out = "dist/index.html",
)

webpack_devserver(
    name = "serve",
    chdir = package_name(),
    data = [
        ":tsc",
        ":webpack_build",
        ":styles",
        ":index_html",
    ],
    entry_points = {
        "dist/webpack_build.js": ":webpack_build",
    },
    node_modules = "//experimental/service_test_ts_webpack_react:node_modules",
    webpack_config="webpack.config.cjs",
)
